                   ========================

Version 1.1.3 to be released
----------------------------
- Bug #856: Logout doesn't work when CWebUser::identityCookie is configured and allowAutoLogin is set true (Qiang)
- Bug #1027: CButtonColumn->buttons is ignored (Sam Dark)
- Bug #1046: Fixed the bug that CDbFixtureManager did not properly initialize the fixture data (Qiang)
- Bug #1142: Fixed the character encoding in polish translations (pawel.drylo)
- Bug #1149: CHtml::resolveName() does not work with multiple dimensional attributes (Qiang)
- Bug #1176: CVarDumper may omit some backslashes in the syntax-highlighted display (Qiang)
- Bug #1190: CLocale::getMonthNames may fail due to a typo (Qiang)
- Bug #1208: Unsigned integer column type was not handled correctly (Qiang)
- Bug #1213: Fixed the bug that skipOnError doesn't have effect on inline validators (Qiang)
- Bug #1226: CWebUser::autoRenewCookie does not handle the case when the user is already logged in (Qiang)
- Bug #1227: CActiveRecord::resetScope doesn't work with default scope (Sam Dark)
- Bug #1231: CPgsqlColumnSchema would incorrectly parse the default value with some complex expressions (Qiang)
- Bug #1241: DB search parameters should have special characters escaped (Qiang)
- Bug #1252: CJSON::encode() was not able to encode models and model arrays (Sam Dark)
- Bug #1262: Fixed the bug that CDbFixtureManager was unable to load fixture data if table prefix feature is used (Qiang)
- Bug #1292: CDateTimeParser::parse() did not honor the number of digits in the required format in some cases (Qiang)
- Bug #1293: Added tag to initial CAPTCHA image URL to avoid caching issue (Qiang)
- Bug #1295: CHtml::beginForm() would generate useless CSRF field when in GET mode (Qiang)
- Bug: Fixed AR memory leaks on PHP<5.3 (Sam Dark, parpaing)
- Enh #663: Improved CSecurityManager to allow customizing the crypt/hash algorithms being used (Qiang)